// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Document Class Instance Methods addTag: Performs Desired Function 1`] = `
Document {
  "_dom": Object {
    "declaration": Object {
      "attributes": Object {
        "encoding": "UTF-8",
        "standalone": "yes",
        "version": "1.0",
      },
    },
    "elements": Array [
      Object {
        "attributes": Object {
          "ContainsContext": true,
          "SchemaRevision": "1.0",
        },
        "elements": Array [
          Object {
            "attributes": Object {
              "Use": "context",
            },
            "elements": Array [
              Object {
                "elements": Array [
                  Object {
                    "attributes": Object {
                      "Name": "hello",
                    },
                    "elements": Array [],
                    "name": "Program",
                    "type": "element",
                  },
                ],
                "name": "Programs",
                "type": "element",
              },
              Object {
                "elements": Array [
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "DataType": "DINT",
                      "ExternalAccess": "Read/Write",
                      "Name": "tag1",
                      "TagType": "Base",
                    },
                    "elements": Array [
                      Object {
                        "elements": Array [
                          Object {
                            "cdata": "A cool tag 1",
                            "type": "cdata",
                          },
                        ],
                        "name": "Description",
                        "type": "element",
                      },
                    ],
                    "name": "Tag",
                    "type": "element",
                  },
                ],
                "name": "Tags",
                "type": "element",
              },
            ],
            "name": "Controller",
            "type": "element",
          },
        ],
        "name": "RSLogix5000Content",
        "type": "element",
      },
    ],
  },
  "class_id": "ba7cc09d99f4a84810458bc89abf612f",
}
`;

exports[`Document Class Instance Methods addTag: Performs Desired Function 2`] = `
Document {
  "_dom": Object {
    "declaration": Object {
      "attributes": Object {
        "encoding": "UTF-8",
        "standalone": "yes",
        "version": "1.0",
      },
    },
    "elements": Array [
      Object {
        "attributes": Object {
          "ContainsContext": true,
          "SchemaRevision": "1.0",
        },
        "elements": Array [
          Object {
            "attributes": Object {
              "Use": "context",
            },
            "elements": Array [
              Object {
                "elements": Array [
                  Object {
                    "attributes": Object {
                      "Name": "hello",
                    },
                    "elements": Array [
                      Object {
                        "elements": Array [
                          Object {
                            "attributes": Object {
                              "AliasFor": "tag1",
                              "Class": "Standard",
                              "DataType": "DINT",
                              "ExternalAccess": "Read/Write",
                              "Name": "tag2",
                              "TagType": "Alias",
                            },
                            "elements": Array [
                              Object {
                                "elements": Array [
                                  Object {
                                    "cdata": "A cool tag 2",
                                    "type": "cdata",
                                  },
                                ],
                                "name": "Description",
                                "type": "element",
                              },
                            ],
                            "name": "Tag",
                            "type": "element",
                          },
                        ],
                        "name": "Tags",
                        "type": "element",
                      },
                    ],
                    "name": "Program",
                    "type": "element",
                  },
                ],
                "name": "Programs",
                "type": "element",
              },
              Object {
                "elements": Array [
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "DataType": "DINT",
                      "ExternalAccess": "Read/Write",
                      "Name": "tag1",
                      "TagType": "Base",
                    },
                    "elements": Array [
                      Object {
                        "elements": Array [
                          Object {
                            "cdata": "A cool tag 1",
                            "type": "cdata",
                          },
                        ],
                        "name": "Description",
                        "type": "element",
                      },
                    ],
                    "name": "Tag",
                    "type": "element",
                  },
                ],
                "name": "Tags",
                "type": "element",
              },
            ],
            "name": "Controller",
            "type": "element",
          },
        ],
        "name": "RSLogix5000Content",
        "type": "element",
      },
    ],
  },
  "class_id": "ba7cc09d99f4a84810458bc89abf612f",
}
`;

exports[`Document Class Instance Methods append: Appends New Dom Element 1`] = `
Document {
  "_dom": Object {
    "declaration": Object {
      "attributes": Object {
        "encoding": "UTF-8",
        "standalone": "yes",
        "version": "1.0",
      },
    },
    "elements": Array [
      Object {
        "attributes": Object {
          "ContainsContext": true,
          "SchemaRevision": "1.0",
        },
        "elements": Array [
          Object {
            "attributes": Object {
              "Use": "context",
            },
            "elements": Array [
              Object {
                "name": "Tags",
                "type": "element",
              },
            ],
            "name": "Controller",
            "type": "element",
          },
        ],
        "name": "RSLogix5000Content",
        "type": "element",
      },
    ],
  },
  "class_id": "ba7cc09d99f4a84810458bc89abf612f",
}
`;

exports[`Document Class Instance Methods append: Appends New Dom Element 2`] = `
Document {
  "_dom": Object {
    "declaration": Object {
      "attributes": Object {
        "encoding": "UTF-8",
        "standalone": "yes",
        "version": "1.0",
      },
    },
    "elements": Array [
      Object {
        "attributes": Object {
          "ContainsContext": true,
          "SchemaRevision": "1.0",
        },
        "elements": Array [
          Object {
            "attributes": Object {
              "Use": "context",
            },
            "elements": Array [
              Object {
                "elements": Array [
                  Object {
                    "attributes": Object {
                      "Name": "SomeTag",
                      "TagType": "Base",
                    },
                    "name": "Tag",
                    "type": "element",
                  },
                ],
                "name": "Tags",
                "type": "element",
              },
            ],
            "name": "Controller",
            "type": "element",
          },
        ],
        "name": "RSLogix5000Content",
        "type": "element",
      },
    ],
  },
  "class_id": "ba7cc09d99f4a84810458bc89abf612f",
}
`;

exports[`Document Class Instance Methods find: Finds Document Elements and Returns New Document 1`] = `
Array [
  Document {
    "_dom": Object {
      "attributes": Object {
        "Name": "TRW_10673_Final",
        "Use": "Context",
      },
      "elements": Array [
        Object {
          "attributes": Object {
            "Use": "Context",
          },
          "elements": Array [
            Object {
              "attributes": Object {
                "Class": "User",
                "Family": "NoFamily",
                "Name": "PB_OneButton",
                "Use": "Target",
              },
              "elements": Array [
                Object {
                  "elements": Array [
                    Object {
                      "attributes": Object {
                        "DataType": "SINT",
                        "Dimension": "0",
                        "ExternalAccess": "Read/Write",
                        "Hidden": "true",
                        "Name": "ZZZZZZZZZZPB_OneButt0",
                        "Radix": "Decimal",
                      },
                      "name": "Member",
                      "type": "element",
                    },
                    Object {
                      "attributes": Object {
                        "BitNumber": "0",
                        "DataType": "BIT",
                        "Dimension": "0",
                        "ExternalAccess": "Read/Write",
                        "Hidden": "false",
                        "Name": "Push",
                        "Radix": "Decimal",
                        "Target": "ZZZZZZZZZZPB_OneButt0",
                      },
                      "elements": Array [
                        Object {
                          "elements": Array [
                            Object {
                              "cdata": "*",
                              "type": "cdata",
                            },
                          ],
                          "name": "Description",
                          "type": "element",
                        },
                      ],
                      "name": "Member",
                      "type": "element",
                    },
                    Object {
                      "attributes": Object {
                        "BitNumber": "1",
                        "DataType": "BIT",
                        "Dimension": "0",
                        "ExternalAccess": "Read/Write",
                        "Hidden": "false",
                        "Name": "State",
                        "Radix": "Decimal",
                        "Target": "ZZZZZZZZZZPB_OneButt0",
                      },
                      "elements": Array [
                        Object {
                          "elements": Array [
                            Object {
                              "cdata": "*",
                              "type": "cdata",
                            },
                          ],
                          "name": "Description",
                          "type": "element",
                        },
                      ],
                      "name": "Member",
                      "type": "element",
                    },
                    Object {
                      "attributes": Object {
                        "BitNumber": "2",
                        "DataType": "BIT",
                        "Dimension": "0",
                        "ExternalAccess": "Read/Write",
                        "Hidden": "false",
                        "Name": "Visibility",
                        "Radix": "Decimal",
                        "Target": "ZZZZZZZZZZPB_OneButt0",
                      },
                      "elements": Array [
                        Object {
                          "elements": Array [
                            Object {
                              "cdata": "*",
                              "type": "cdata",
                            },
                          ],
                          "name": "Description",
                          "type": "element",
                        },
                      ],
                      "name": "Member",
                      "type": "element",
                    },
                    Object {
                      "attributes": Object {
                        "BitNumber": "3",
                        "DataType": "BIT",
                        "Dimension": "0",
                        "ExternalAccess": "Read/Write",
                        "Hidden": "false",
                        "Name": "Ind",
                        "Radix": "Decimal",
                        "Target": "ZZZZZZZZZZPB_OneButt0",
                      },
                      "elements": Array [
                        Object {
                          "elements": Array [
                            Object {
                              "cdata": "*",
                              "type": "cdata",
                            },
                          ],
                          "name": "Description",
                          "type": "element",
                        },
                      ],
                      "name": "Member",
                      "type": "element",
                    },
                    Object {
                      "attributes": Object {
                        "BitNumber": "4",
                        "DataType": "BIT",
                        "Dimension": "0",
                        "ExternalAccess": "Read/Write",
                        "Hidden": "false",
                        "Name": "Interlock",
                        "Radix": "Decimal",
                        "Target": "ZZZZZZZZZZPB_OneButt0",
                      },
                      "elements": Array [
                        Object {
                          "elements": Array [
                            Object {
                              "cdata": "*",
                              "type": "cdata",
                            },
                          ],
                          "name": "Description",
                          "type": "element",
                        },
                      ],
                      "name": "Member",
                      "type": "element",
                    },
                    Object {
                      "attributes": Object {
                        "BitNumber": "5",
                        "DataType": "BIT",
                        "Dimension": "0",
                        "ExternalAccess": "Read/Write",
                        "Hidden": "false",
                        "Name": "ONS",
                        "Radix": "Decimal",
                        "Target": "ZZZZZZZZZZPB_OneButt0",
                      },
                      "elements": Array [
                        Object {
                          "elements": Array [
                            Object {
                              "cdata": "*",
                              "type": "cdata",
                            },
                          ],
                          "name": "Description",
                          "type": "element",
                        },
                      ],
                      "name": "Member",
                      "type": "element",
                    },
                    Object {
                      "attributes": Object {
                        "DataType": "TIMER",
                        "Dimension": "0",
                        "ExternalAccess": "Read/Write",
                        "Hidden": "false",
                        "Name": "Tmr",
                        "Radix": "NullType",
                      },
                      "elements": Array [
                        Object {
                          "elements": Array [
                            Object {
                              "cdata": "*",
                              "type": "cdata",
                            },
                          ],
                          "name": "Description",
                          "type": "element",
                        },
                      ],
                      "name": "Member",
                      "type": "element",
                    },
                  ],
                  "name": "Members",
                  "type": "element",
                },
              ],
              "name": "DataType",
              "type": "element",
            },
          ],
          "name": "DataTypes",
          "type": "element",
        },
      ],
      "name": "Controller",
      "type": "element",
    },
    "class_id": "ba7cc09d99f4a84810458bc89abf612f",
  },
]
`;

exports[`Document Class Instance Methods find: Finds Document Elements and Returns New Document 2`] = `
Array [
  Document {
    "_dom": Object {
      "attributes": Object {
        "Use": "context",
      },
      "elements": Array [],
      "name": "Controller",
      "type": "element",
    },
    "class_id": "ba7cc09d99f4a84810458bc89abf612f",
  },
]
`;

exports[`Document Class Instance Methods find: Finds Document Elements and Returns New Document 3`] = `
Array [
  Document {
    "_dom": Object {
      "attributes": Object {
        "BitNumber": "0",
        "DataType": "BIT",
        "Dimension": "0",
        "ExternalAccess": "Read/Write",
        "Hidden": "false",
        "Name": "Push",
        "Radix": "Decimal",
        "Target": "ZZZZZZZZZZPB_OneButt0",
      },
      "elements": Array [
        Object {
          "elements": Array [
            Object {
              "cdata": "*",
              "type": "cdata",
            },
          ],
          "name": "Description",
          "type": "element",
        },
      ],
      "name": "Member",
      "type": "element",
    },
    "class_id": "ba7cc09d99f4a84810458bc89abf612f",
  },
]
`;

exports[`Document Class Instance Methods find: Finds Document Elements and Returns New Document 4`] = `
Array [
  Document {
    "_dom": Object {
      "attributes": Object {
        "DataType": "SINT",
        "Dimension": "0",
        "ExternalAccess": "Read/Write",
        "Hidden": "true",
        "Name": "ZZZZZZZZZZPB_OneButt0",
        "Radix": "Decimal",
      },
      "name": "Member",
      "type": "element",
    },
    "class_id": "ba7cc09d99f4a84810458bc89abf612f",
  },
  Document {
    "_dom": Object {
      "attributes": Object {
        "BitNumber": "0",
        "DataType": "BIT",
        "Dimension": "0",
        "ExternalAccess": "Read/Write",
        "Hidden": "false",
        "Name": "Push",
        "Radix": "Decimal",
        "Target": "ZZZZZZZZZZPB_OneButt0",
      },
      "elements": Array [
        Object {
          "elements": Array [
            Object {
              "cdata": "*",
              "type": "cdata",
            },
          ],
          "name": "Description",
          "type": "element",
        },
      ],
      "name": "Member",
      "type": "element",
    },
    "class_id": "ba7cc09d99f4a84810458bc89abf612f",
  },
  Document {
    "_dom": Object {
      "attributes": Object {
        "BitNumber": "1",
        "DataType": "BIT",
        "Dimension": "0",
        "ExternalAccess": "Read/Write",
        "Hidden": "false",
        "Name": "State",
        "Radix": "Decimal",
        "Target": "ZZZZZZZZZZPB_OneButt0",
      },
      "elements": Array [
        Object {
          "elements": Array [
            Object {
              "cdata": "*",
              "type": "cdata",
            },
          ],
          "name": "Description",
          "type": "element",
        },
      ],
      "name": "Member",
      "type": "element",
    },
    "class_id": "ba7cc09d99f4a84810458bc89abf612f",
  },
  Document {
    "_dom": Object {
      "attributes": Object {
        "BitNumber": "2",
        "DataType": "BIT",
        "Dimension": "0",
        "ExternalAccess": "Read/Write",
        "Hidden": "false",
        "Name": "Visibility",
        "Radix": "Decimal",
        "Target": "ZZZZZZZZZZPB_OneButt0",
      },
      "elements": Array [
        Object {
          "elements": Array [
            Object {
              "cdata": "*",
              "type": "cdata",
            },
          ],
          "name": "Description",
          "type": "element",
        },
      ],
      "name": "Member",
      "type": "element",
    },
    "class_id": "ba7cc09d99f4a84810458bc89abf612f",
  },
  Document {
    "_dom": Object {
      "attributes": Object {
        "BitNumber": "3",
        "DataType": "BIT",
        "Dimension": "0",
        "ExternalAccess": "Read/Write",
        "Hidden": "false",
        "Name": "Ind",
        "Radix": "Decimal",
        "Target": "ZZZZZZZZZZPB_OneButt0",
      },
      "elements": Array [
        Object {
          "elements": Array [
            Object {
              "cdata": "*",
              "type": "cdata",
            },
          ],
          "name": "Description",
          "type": "element",
        },
      ],
      "name": "Member",
      "type": "element",
    },
    "class_id": "ba7cc09d99f4a84810458bc89abf612f",
  },
  Document {
    "_dom": Object {
      "attributes": Object {
        "BitNumber": "4",
        "DataType": "BIT",
        "Dimension": "0",
        "ExternalAccess": "Read/Write",
        "Hidden": "false",
        "Name": "Interlock",
        "Radix": "Decimal",
        "Target": "ZZZZZZZZZZPB_OneButt0",
      },
      "elements": Array [
        Object {
          "elements": Array [
            Object {
              "cdata": "*",
              "type": "cdata",
            },
          ],
          "name": "Description",
          "type": "element",
        },
      ],
      "name": "Member",
      "type": "element",
    },
    "class_id": "ba7cc09d99f4a84810458bc89abf612f",
  },
  Document {
    "_dom": Object {
      "attributes": Object {
        "BitNumber": "5",
        "DataType": "BIT",
        "Dimension": "0",
        "ExternalAccess": "Read/Write",
        "Hidden": "false",
        "Name": "ONS",
        "Radix": "Decimal",
        "Target": "ZZZZZZZZZZPB_OneButt0",
      },
      "elements": Array [
        Object {
          "elements": Array [
            Object {
              "cdata": "*",
              "type": "cdata",
            },
          ],
          "name": "Description",
          "type": "element",
        },
      ],
      "name": "Member",
      "type": "element",
    },
    "class_id": "ba7cc09d99f4a84810458bc89abf612f",
  },
  Document {
    "_dom": Object {
      "attributes": Object {
        "DataType": "TIMER",
        "Dimension": "0",
        "ExternalAccess": "Read/Write",
        "Hidden": "false",
        "Name": "Tmr",
        "Radix": "NullType",
      },
      "elements": Array [
        Object {
          "elements": Array [
            Object {
              "cdata": "*",
              "type": "cdata",
            },
          ],
          "name": "Description",
          "type": "element",
        },
      ],
      "name": "Member",
      "type": "element",
    },
    "class_id": "ba7cc09d99f4a84810458bc89abf612f",
  },
]
`;

exports[`Document Class Instance Methods find: Finds Document Elements and Returns New Document 5`] = `
Array [
  Document {
    "_dom": Object {
      "attributes": Object {
        "BitNumber": "0",
        "DataType": "BIT",
        "Dimension": "0",
        "ExternalAccess": "Read/Write",
        "Hidden": "false",
        "Name": "Push",
        "Radix": "Decimal",
        "Target": "ZZZZZZZZZZPB_OneButt0",
      },
      "elements": Array [
        Object {
          "elements": Array [
            Object {
              "cdata": "*",
              "type": "cdata",
            },
          ],
          "name": "Description",
          "type": "element",
        },
      ],
      "name": "Member",
      "type": "element",
    },
    "class_id": "ba7cc09d99f4a84810458bc89abf612f",
  },
]
`;

exports[`Document Class Instance Methods findOne: Finds First Document Element 1`] = `
Document {
  "_dom": Object {
    "attributes": Object {
      "Name": "TRW_10673_Final",
      "Use": "Context",
    },
    "elements": Array [
      Object {
        "attributes": Object {
          "Use": "Context",
        },
        "elements": Array [
          Object {
            "attributes": Object {
              "Class": "User",
              "Family": "NoFamily",
              "Name": "PB_OneButton",
              "Use": "Target",
            },
            "elements": Array [
              Object {
                "elements": Array [
                  Object {
                    "attributes": Object {
                      "DataType": "SINT",
                      "Dimension": "0",
                      "ExternalAccess": "Read/Write",
                      "Hidden": "true",
                      "Name": "ZZZZZZZZZZPB_OneButt0",
                      "Radix": "Decimal",
                    },
                    "name": "Member",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "BitNumber": "0",
                      "DataType": "BIT",
                      "Dimension": "0",
                      "ExternalAccess": "Read/Write",
                      "Hidden": "false",
                      "Name": "Push",
                      "Radix": "Decimal",
                      "Target": "ZZZZZZZZZZPB_OneButt0",
                    },
                    "elements": Array [
                      Object {
                        "elements": Array [
                          Object {
                            "cdata": "*",
                            "type": "cdata",
                          },
                        ],
                        "name": "Description",
                        "type": "element",
                      },
                    ],
                    "name": "Member",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "BitNumber": "1",
                      "DataType": "BIT",
                      "Dimension": "0",
                      "ExternalAccess": "Read/Write",
                      "Hidden": "false",
                      "Name": "State",
                      "Radix": "Decimal",
                      "Target": "ZZZZZZZZZZPB_OneButt0",
                    },
                    "elements": Array [
                      Object {
                        "elements": Array [
                          Object {
                            "cdata": "*",
                            "type": "cdata",
                          },
                        ],
                        "name": "Description",
                        "type": "element",
                      },
                    ],
                    "name": "Member",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "BitNumber": "2",
                      "DataType": "BIT",
                      "Dimension": "0",
                      "ExternalAccess": "Read/Write",
                      "Hidden": "false",
                      "Name": "Visibility",
                      "Radix": "Decimal",
                      "Target": "ZZZZZZZZZZPB_OneButt0",
                    },
                    "elements": Array [
                      Object {
                        "elements": Array [
                          Object {
                            "cdata": "*",
                            "type": "cdata",
                          },
                        ],
                        "name": "Description",
                        "type": "element",
                      },
                    ],
                    "name": "Member",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "BitNumber": "3",
                      "DataType": "BIT",
                      "Dimension": "0",
                      "ExternalAccess": "Read/Write",
                      "Hidden": "false",
                      "Name": "Ind",
                      "Radix": "Decimal",
                      "Target": "ZZZZZZZZZZPB_OneButt0",
                    },
                    "elements": Array [
                      Object {
                        "elements": Array [
                          Object {
                            "cdata": "*",
                            "type": "cdata",
                          },
                        ],
                        "name": "Description",
                        "type": "element",
                      },
                    ],
                    "name": "Member",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "BitNumber": "4",
                      "DataType": "BIT",
                      "Dimension": "0",
                      "ExternalAccess": "Read/Write",
                      "Hidden": "false",
                      "Name": "Interlock",
                      "Radix": "Decimal",
                      "Target": "ZZZZZZZZZZPB_OneButt0",
                    },
                    "elements": Array [
                      Object {
                        "elements": Array [
                          Object {
                            "cdata": "*",
                            "type": "cdata",
                          },
                        ],
                        "name": "Description",
                        "type": "element",
                      },
                    ],
                    "name": "Member",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "BitNumber": "5",
                      "DataType": "BIT",
                      "Dimension": "0",
                      "ExternalAccess": "Read/Write",
                      "Hidden": "false",
                      "Name": "ONS",
                      "Radix": "Decimal",
                      "Target": "ZZZZZZZZZZPB_OneButt0",
                    },
                    "elements": Array [
                      Object {
                        "elements": Array [
                          Object {
                            "cdata": "*",
                            "type": "cdata",
                          },
                        ],
                        "name": "Description",
                        "type": "element",
                      },
                    ],
                    "name": "Member",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "DataType": "TIMER",
                      "Dimension": "0",
                      "ExternalAccess": "Read/Write",
                      "Hidden": "false",
                      "Name": "Tmr",
                      "Radix": "NullType",
                    },
                    "elements": Array [
                      Object {
                        "elements": Array [
                          Object {
                            "cdata": "*",
                            "type": "cdata",
                          },
                        ],
                        "name": "Description",
                        "type": "element",
                      },
                    ],
                    "name": "Member",
                    "type": "element",
                  },
                ],
                "name": "Members",
                "type": "element",
              },
            ],
            "name": "DataType",
            "type": "element",
          },
        ],
        "name": "DataTypes",
        "type": "element",
      },
    ],
    "name": "Controller",
    "type": "element",
  },
  "class_id": "ba7cc09d99f4a84810458bc89abf612f",
}
`;

exports[`Document Class Instance Methods findOne: Finds First Document Element 2`] = `
Document {
  "_dom": Object {
    "attributes": Object {
      "Use": "context",
    },
    "elements": Array [],
    "name": "Controller",
    "type": "element",
  },
  "class_id": "ba7cc09d99f4a84810458bc89abf612f",
}
`;

exports[`Document Class Instance Methods findOne: Finds First Document Element 3`] = `
Document {
  "_dom": Object {
    "attributes": Object {
      "BitNumber": "0",
      "DataType": "BIT",
      "Dimension": "0",
      "ExternalAccess": "Read/Write",
      "Hidden": "false",
      "Name": "Push",
      "Radix": "Decimal",
      "Target": "ZZZZZZZZZZPB_OneButt0",
    },
    "elements": Array [
      Object {
        "elements": Array [
          Object {
            "cdata": "*",
            "type": "cdata",
          },
        ],
        "name": "Description",
        "type": "element",
      },
    ],
    "name": "Member",
    "type": "element",
  },
  "class_id": "ba7cc09d99f4a84810458bc89abf612f",
}
`;

exports[`Document Class Instance Methods findOne: Finds First Document Element 4`] = `
Document {
  "_dom": Object {
    "attributes": Object {
      "DataType": "SINT",
      "Dimension": "0",
      "ExternalAccess": "Read/Write",
      "Hidden": "true",
      "Name": "ZZZZZZZZZZPB_OneButt0",
      "Radix": "Decimal",
    },
    "name": "Member",
    "type": "element",
  },
  "class_id": "ba7cc09d99f4a84810458bc89abf612f",
}
`;

exports[`Document Class Instance Methods findOne: Finds First Document Element 5`] = `
Document {
  "_dom": Object {
    "attributes": Object {
      "BitNumber": "0",
      "DataType": "BIT",
      "Dimension": "0",
      "ExternalAccess": "Read/Write",
      "Hidden": "false",
      "Name": "Push",
      "Radix": "Decimal",
      "Target": "ZZZZZZZZZZPB_OneButt0",
    },
    "elements": Array [
      Object {
        "elements": Array [
          Object {
            "cdata": "*",
            "type": "cdata",
          },
        ],
        "name": "Description",
        "type": "element",
      },
    ],
    "name": "Member",
    "type": "element",
  },
  "class_id": "ba7cc09d99f4a84810458bc89abf612f",
}
`;

exports[`Document Class Instance Methods get dom: Gets Mutable Dom Reference 1`] = `
Object {
  "declaration": Object {
    "attributes": Object {
      "encoding": "UTF-8",
      "standalone": "yes",
      "version": "1.0",
    },
  },
  "elements": Array [
    Object {
      "attributes": Object {
        "ContainsContext": "true",
        "ExportDate": "Tue Aug 29 09:06:17 2017",
        "ExportOptions": "References NoRawData L5KData DecoratedData Context Dependencies ForceProtectedEncoding AllProjDocTrans",
        "Owner": "Operator",
        "SchemaRevision": "1.0",
        "SoftwareRevision": "28.00",
        "TargetName": "PB_OneButton",
        "TargetType": "DataType",
      },
      "elements": Array [
        Object {
          "attributes": Object {
            "Name": "TRW_10673_Final",
            "Use": "Context",
          },
          "elements": Array [
            Object {
              "attributes": Object {
                "Use": "Context",
              },
              "elements": Array [
                Object {
                  "attributes": Object {
                    "Class": "User",
                    "Family": "NoFamily",
                    "Name": "PB_OneButton",
                    "Use": "Target",
                  },
                  "elements": Array [
                    Object {
                      "elements": Array [
                        Object {
                          "attributes": Object {
                            "DataType": "SINT",
                            "Dimension": "0",
                            "ExternalAccess": "Read/Write",
                            "Hidden": "true",
                            "Name": "ZZZZZZZZZZPB_OneButt0",
                            "Radix": "Decimal",
                          },
                          "name": "Member",
                          "type": "element",
                        },
                        Object {
                          "attributes": Object {
                            "BitNumber": "0",
                            "DataType": "BIT",
                            "Dimension": "0",
                            "ExternalAccess": "Read/Write",
                            "Hidden": "false",
                            "Name": "Push",
                            "Radix": "Decimal",
                            "Target": "ZZZZZZZZZZPB_OneButt0",
                          },
                          "elements": Array [
                            Object {
                              "elements": Array [
                                Object {
                                  "cdata": "*",
                                  "type": "cdata",
                                },
                              ],
                              "name": "Description",
                              "type": "element",
                            },
                          ],
                          "name": "Member",
                          "type": "element",
                        },
                        Object {
                          "attributes": Object {
                            "BitNumber": "1",
                            "DataType": "BIT",
                            "Dimension": "0",
                            "ExternalAccess": "Read/Write",
                            "Hidden": "false",
                            "Name": "State",
                            "Radix": "Decimal",
                            "Target": "ZZZZZZZZZZPB_OneButt0",
                          },
                          "elements": Array [
                            Object {
                              "elements": Array [
                                Object {
                                  "cdata": "*",
                                  "type": "cdata",
                                },
                              ],
                              "name": "Description",
                              "type": "element",
                            },
                          ],
                          "name": "Member",
                          "type": "element",
                        },
                        Object {
                          "attributes": Object {
                            "BitNumber": "2",
                            "DataType": "BIT",
                            "Dimension": "0",
                            "ExternalAccess": "Read/Write",
                            "Hidden": "false",
                            "Name": "Visibility",
                            "Radix": "Decimal",
                            "Target": "ZZZZZZZZZZPB_OneButt0",
                          },
                          "elements": Array [
                            Object {
                              "elements": Array [
                                Object {
                                  "cdata": "*",
                                  "type": "cdata",
                                },
                              ],
                              "name": "Description",
                              "type": "element",
                            },
                          ],
                          "name": "Member",
                          "type": "element",
                        },
                        Object {
                          "attributes": Object {
                            "BitNumber": "3",
                            "DataType": "BIT",
                            "Dimension": "0",
                            "ExternalAccess": "Read/Write",
                            "Hidden": "false",
                            "Name": "Ind",
                            "Radix": "Decimal",
                            "Target": "ZZZZZZZZZZPB_OneButt0",
                          },
                          "elements": Array [
                            Object {
                              "elements": Array [
                                Object {
                                  "cdata": "*",
                                  "type": "cdata",
                                },
                              ],
                              "name": "Description",
                              "type": "element",
                            },
                          ],
                          "name": "Member",
                          "type": "element",
                        },
                        Object {
                          "attributes": Object {
                            "BitNumber": "4",
                            "DataType": "BIT",
                            "Dimension": "0",
                            "ExternalAccess": "Read/Write",
                            "Hidden": "false",
                            "Name": "Interlock",
                            "Radix": "Decimal",
                            "Target": "ZZZZZZZZZZPB_OneButt0",
                          },
                          "elements": Array [
                            Object {
                              "elements": Array [
                                Object {
                                  "cdata": "*",
                                  "type": "cdata",
                                },
                              ],
                              "name": "Description",
                              "type": "element",
                            },
                          ],
                          "name": "Member",
                          "type": "element",
                        },
                        Object {
                          "attributes": Object {
                            "BitNumber": "5",
                            "DataType": "BIT",
                            "Dimension": "0",
                            "ExternalAccess": "Read/Write",
                            "Hidden": "false",
                            "Name": "ONS",
                            "Radix": "Decimal",
                            "Target": "ZZZZZZZZZZPB_OneButt0",
                          },
                          "elements": Array [
                            Object {
                              "elements": Array [
                                Object {
                                  "cdata": "*",
                                  "type": "cdata",
                                },
                              ],
                              "name": "Description",
                              "type": "element",
                            },
                          ],
                          "name": "Member",
                          "type": "element",
                        },
                        Object {
                          "attributes": Object {
                            "DataType": "TIMER",
                            "Dimension": "0",
                            "ExternalAccess": "Read/Write",
                            "Hidden": "false",
                            "Name": "Tmr",
                            "Radix": "NullType",
                          },
                          "elements": Array [
                            Object {
                              "elements": Array [
                                Object {
                                  "cdata": "*",
                                  "type": "cdata",
                                },
                              ],
                              "name": "Description",
                              "type": "element",
                            },
                          ],
                          "name": "Member",
                          "type": "element",
                        },
                      ],
                      "name": "Members",
                      "type": "element",
                    },
                  ],
                  "name": "DataType",
                  "type": "element",
                },
              ],
              "name": "DataTypes",
              "type": "element",
            },
          ],
          "name": "Controller",
          "type": "element",
        },
      ],
      "name": "RSLogix5000Content",
      "type": "element",
    },
  ],
}
`;

exports[`Document Class New Instance Initializes with Desired Document Model 1`] = `
Object {
  "declaration": Object {
    "attributes": Object {
      "encoding": "UTF-8",
      "standalone": "yes",
      "version": "1.0",
    },
  },
  "elements": Array [
    Object {
      "attributes": Object {
        "ContainsContext": true,
        "SchemaRevision": "1.0",
      },
      "elements": Array [
        Object {
          "attributes": Object {
            "Use": "context",
          },
          "elements": Array [],
          "name": "Controller",
          "type": "element",
        },
      ],
      "name": "RSLogix5000Content",
      "type": "element",
    },
  ],
}
`;

exports[`Document Class New Instance Initializes with Desired Document Model 2`] = `
Object {
  "declaration": Object {
    "attributes": Object {
      "encoding": "UTF-8",
      "standalone": "yes",
      "version": "1.0",
    },
  },
  "elements": Array [
    Object {
      "attributes": Object {
        "ContainsContext": "true",
        "ExportDate": "Tue Aug 29 09:06:17 2017",
        "ExportOptions": "References NoRawData L5KData DecoratedData Context Dependencies ForceProtectedEncoding AllProjDocTrans",
        "Owner": "Operator",
        "SchemaRevision": "1.0",
        "SoftwareRevision": "28.00",
        "TargetName": "PB_OneButton",
        "TargetType": "DataType",
      },
      "elements": Array [
        Object {
          "attributes": Object {
            "Name": "TRW_10673_Final",
            "Use": "Context",
          },
          "elements": Array [
            Object {
              "attributes": Object {
                "Use": "Context",
              },
              "elements": Array [
                Object {
                  "attributes": Object {
                    "Class": "User",
                    "Family": "NoFamily",
                    "Name": "PB_OneButton",
                    "Use": "Target",
                  },
                  "elements": Array [
                    Object {
                      "elements": Array [
                        Object {
                          "attributes": Object {
                            "DataType": "SINT",
                            "Dimension": "0",
                            "ExternalAccess": "Read/Write",
                            "Hidden": "true",
                            "Name": "ZZZZZZZZZZPB_OneButt0",
                            "Radix": "Decimal",
                          },
                          "name": "Member",
                          "type": "element",
                        },
                        Object {
                          "attributes": Object {
                            "BitNumber": "0",
                            "DataType": "BIT",
                            "Dimension": "0",
                            "ExternalAccess": "Read/Write",
                            "Hidden": "false",
                            "Name": "Push",
                            "Radix": "Decimal",
                            "Target": "ZZZZZZZZZZPB_OneButt0",
                          },
                          "elements": Array [
                            Object {
                              "elements": Array [
                                Object {
                                  "cdata": "*",
                                  "type": "cdata",
                                },
                              ],
                              "name": "Description",
                              "type": "element",
                            },
                          ],
                          "name": "Member",
                          "type": "element",
                        },
                        Object {
                          "attributes": Object {
                            "BitNumber": "1",
                            "DataType": "BIT",
                            "Dimension": "0",
                            "ExternalAccess": "Read/Write",
                            "Hidden": "false",
                            "Name": "State",
                            "Radix": "Decimal",
                            "Target": "ZZZZZZZZZZPB_OneButt0",
                          },
                          "elements": Array [
                            Object {
                              "elements": Array [
                                Object {
                                  "cdata": "*",
                                  "type": "cdata",
                                },
                              ],
                              "name": "Description",
                              "type": "element",
                            },
                          ],
                          "name": "Member",
                          "type": "element",
                        },
                        Object {
                          "attributes": Object {
                            "BitNumber": "2",
                            "DataType": "BIT",
                            "Dimension": "0",
                            "ExternalAccess": "Read/Write",
                            "Hidden": "false",
                            "Name": "Visibility",
                            "Radix": "Decimal",
                            "Target": "ZZZZZZZZZZPB_OneButt0",
                          },
                          "elements": Array [
                            Object {
                              "elements": Array [
                                Object {
                                  "cdata": "*",
                                  "type": "cdata",
                                },
                              ],
                              "name": "Description",
                              "type": "element",
                            },
                          ],
                          "name": "Member",
                          "type": "element",
                        },
                        Object {
                          "attributes": Object {
                            "BitNumber": "3",
                            "DataType": "BIT",
                            "Dimension": "0",
                            "ExternalAccess": "Read/Write",
                            "Hidden": "false",
                            "Name": "Ind",
                            "Radix": "Decimal",
                            "Target": "ZZZZZZZZZZPB_OneButt0",
                          },
                          "elements": Array [
                            Object {
                              "elements": Array [
                                Object {
                                  "cdata": "*",
                                  "type": "cdata",
                                },
                              ],
                              "name": "Description",
                              "type": "element",
                            },
                          ],
                          "name": "Member",
                          "type": "element",
                        },
                        Object {
                          "attributes": Object {
                            "BitNumber": "4",
                            "DataType": "BIT",
                            "Dimension": "0",
                            "ExternalAccess": "Read/Write",
                            "Hidden": "false",
                            "Name": "Interlock",
                            "Radix": "Decimal",
                            "Target": "ZZZZZZZZZZPB_OneButt0",
                          },
                          "elements": Array [
                            Object {
                              "elements": Array [
                                Object {
                                  "cdata": "*",
                                  "type": "cdata",
                                },
                              ],
                              "name": "Description",
                              "type": "element",
                            },
                          ],
                          "name": "Member",
                          "type": "element",
                        },
                        Object {
                          "attributes": Object {
                            "BitNumber": "5",
                            "DataType": "BIT",
                            "Dimension": "0",
                            "ExternalAccess": "Read/Write",
                            "Hidden": "false",
                            "Name": "ONS",
                            "Radix": "Decimal",
                            "Target": "ZZZZZZZZZZPB_OneButt0",
                          },
                          "elements": Array [
                            Object {
                              "elements": Array [
                                Object {
                                  "cdata": "*",
                                  "type": "cdata",
                                },
                              ],
                              "name": "Description",
                              "type": "element",
                            },
                          ],
                          "name": "Member",
                          "type": "element",
                        },
                        Object {
                          "attributes": Object {
                            "DataType": "TIMER",
                            "Dimension": "0",
                            "ExternalAccess": "Read/Write",
                            "Hidden": "false",
                            "Name": "Tmr",
                            "Radix": "NullType",
                          },
                          "elements": Array [
                            Object {
                              "elements": Array [
                                Object {
                                  "cdata": "*",
                                  "type": "cdata",
                                },
                              ],
                              "name": "Description",
                              "type": "element",
                            },
                          ],
                          "name": "Member",
                          "type": "element",
                        },
                      ],
                      "name": "Members",
                      "type": "element",
                    },
                  ],
                  "name": "DataType",
                  "type": "element",
                },
              ],
              "name": "DataTypes",
              "type": "element",
            },
          ],
          "name": "Controller",
          "type": "element",
        },
      ],
      "name": "RSLogix5000Content",
      "type": "element",
    },
  ],
}
`;
